Yhteensopivuus onglemat korjattu